some lorem ipsum

--- a/index.html
+++ b/index.html
@@ -531,8 +531,7 @@
               Excelent Services
             </h5>
             <p class="mt-2 mb-4 text-gray-500">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda inventore, cum repellendus ex voluptatem laudantium quaerat neque modi architecto possimus soluta molestias, consequuntur ratione, iste quae tempore numquam deleniti autem.
             </p>
           </div>
           <!-- Item -->
@@ -546,8 +545,7 @@
               Grow your market
             </h5>
             <p class="mt-2 mb-4 text-gray-500">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores corrupti voluptate temporibus, necessitatibus harum animi quibusdam perspiciatis modi odio nostrum nemo a, officia laboriosam hic, perferendis laudantium quo voluptates voluptatum.
             </p>
           </div>
           <!-- Item -->
@@ -559,8 +557,7 @@
             <!-- Text Box -->
             <h5 class="text-xl mt-5 font-semibold text-white">Launch time</h5>
             <p class="mt-2 mb-4 text-gray-500">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde facere harum amet aut. Commodi repellat in tempora consequuntur maxime nemo dolorem ipsa accusamus, molestiae distinctio maiores similique! Deserunt, veritatis dignissimos!
             </p>
           </div>
         </div>
